cka/documentation/05-network/03-network-policies/03-allow-all-traffic-to-an-application.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: web-allow-all
spec:
  podSelector:
    matchLabels:
      app: web
  policyTypes:
    - Ingress
  ingress: 
    - {}
