cka/documentation/05-network/03-network-policies/05-allow-traffic-to-an-application-from-all-namespaces.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: web-allow-all-namespaces
spec:
  podSelector:
    matchLabels:
      app: web
  policyTypes:
    - Ingress
  ingress:
    - from:
       - namespaceSelectors: {}
