cka/documentation/05-network/03-network-policies/06-allow-traffic-from-a-namespace.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traffic-from-ns
  namespace: my-namespace
spec:
  podSelector:
    matchLabels:
      app: web
  policyTypes:
    - Ingress
  ingress:
    - from:
      - namespaceSelectors:
          matchLabels:
            purpose: production
